op2: overlay: enable config_fingerprintRemoveClientOnCancel
Change-Id: I14583dbec8b680dcd6b11b92cd7f26d2dd668f14

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -426,4 +426,5 @@
          Used to decide if we show pulse settings -->
     <bool name="config_ledCanPulse">true</bool>
 
+    <bool name="config_fingerprintRemoveClientOnCancel">true</bool>
 </resources>
